add dataset and preprocessing

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 SC_dataset/*
 DiffWave-unconditional/exp/ch256_T200_betaT0.02/logs/checkpoint/1000000.pkl
-/audio-diff-gan/mels/
+/audio_diff_gan/mels/
+/audio_diff_gan/mels_old/
 /**/.ipynb_checkpoints/
 /**/__pycache__/
