working training process

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 SC_dataset/*
 DiffWave-unconditional/exp/ch256_T200_betaT0.02/logs/checkpoint/1000000.pkl
-/audio_diff_gan/mels/
-/audio_diff_gan/mels_old/
+ddgan/audio_diff_gan/mels/
+ddgan/audio_diff_gan/mels_old/
 /**/.ipynb_checkpoints/
 /**/__pycache__/
+ddgan/saved_info/
